--- a/.gitignore
+++ b/.gitignore
@@ -83,4 +83,4 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/visualstudiocode,windows,c++,cmake
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
-
+.vscode/*
